--- a/style.css
+++ b/style.css
@@ -965,6 +965,7 @@ div#navbarSupportedContent1 {
     background-color: black;
     margin-top: 8px;
     width: 100%;
+    height: 100% !important;
 }
 .navbar {
     padding-bottom: 0;
